RESOLVED FIXED202982
MultiChannelResampler does not need to recreate a ChannelProvider for every process call
https://bugs.webkit.org/show_bug.cgi?id=202982
Summary MultiChannelResampler does not need to recreate a ChannelProvider for every p...
youenn fablet
Reported 2019-10-15 02:08:12 PDT
MultiChannelResampler does not need to recreate a ChannelProvider for every process call
Attachments
Patch (6.06 KB, patch)
2019-10-15 02:10 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-10-15 02:10:56 PDT
Eric Carlson
Comment 2 2019-10-15 05:42:06 PDT
Comment on attachment 380973 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-10-17 03:29:59 PDT
Comment on attachment 380973 [details] Patch Clearing flags on attachment: 380973 Committed r251230: <https://trac.webkit.org/changeset/251230>
WebKit Commit Bot
Comment 4 2019-10-17 03:30:01 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-10-17 03:30:14 PDT
Note You need to log in before you can comment on or make changes to this bug.