MultiChannelResampler does not need to recreate a ChannelProvider for every process call https://bugs.webkit.org/show_bug.cgi?id=202982

Reviewed by Eric Carlson.

We no longer allocate a new ChannelProvider for every process call.
No observable change of behavior.

* platform/audio/MultiChannelResampler.cpp:
(WebCore::MultiChannelResampler::ChannelProvider::ChannelProvider):
(WebCore::MultiChannelResampler::ChannelProvider::setProvider):
(WebCore::MultiChannelResampler::MultiChannelResampler):
(WebCore::MultiChannelResampler::process):
* platform/audio/MultiChannelResampler.h:


Canonical link: https://commits.webkit.org/216496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251230 268f45cc-cd09-0410-ab3c-d52691b4dbfc